[package]
name = "hail_rs"
version = "0.0.1"
authors = ["Christopher Vittal <cvittal@broadinstitute.org>"]
license = "MIT"
description = "rust interface to https://hail.is native files"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
